[gd_scene load_steps=19 format=3 uid="uid://dpisp77jdq12k"]

[ext_resource type="Script" path="res://Retry.gd" id="1_8r4xr"]
[ext_resource type="Script" path="res://end_screen.gd" id="1_npkjd"]
[ext_resource type="Texture2D" uid="uid://dgur70by7fq0d" path="res://retrybutton.png" id="1_xp2y5"]
[ext_resource type="Texture2D" uid="uid://vpjn3257s1w7" path="res://mainmenu.png" id="3_u5qbi"]
[ext_resource type="Texture2D" uid="uid://b1jym6qt5r3gq" path="res://background.png" id="4_lcoyp"]
[ext_resource type="Script" path="res://main_menu_button.gd" id="4_x1fs2"]
[ext_resource type="Texture2D" uid="uid://5ck2k8ni6g8w" path="res://catgodangry.png" id="5_lgw0n"]
[ext_resource type="Script" path="res://CatGod.gd" id="6_0jj0q"]
[ext_resource type="Texture2D" uid="uid://bwvhbyff6drq5" path="res://catgodhappy.png" id="6_qtkey"]
[ext_resource type="Script" path="res://BribeButton.gd" id="7_apd6t"]
[ext_resource type="Texture2D" uid="uid://c1v5cj4csml4l" path="res://bribebutton.png" id="7_ogg7p"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hpea4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_xp2y5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lgnq4"]
size = Vector2(434, 204)

[sub_resource type="SpriteFrames" id="SpriteFrames_a8lsk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_u5qbi")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_h7qgx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_lcoyp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_g56jv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_lgw0n")
}],
"loop": true,
"name": &"angry",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_qtkey")
}],
"loop": true,
"name": &"happy",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_pdq4p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_ogg7p")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4p362"]
size = Vector2(448, 226)

[node name="EndScreen" type="Node2D"]
script = ExtResource("1_npkjd")

[node name="Retry" type="Area2D" parent="."]
position = Vector2(362, 601)
script = ExtResource("1_8r4xr")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Retry"]
position = Vector2(0, -1.90735e-06)
scale = Vector2(0.836, 0.793333)
sprite_frames = SubResource("SpriteFrames_hpea4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Retry"]
position = Vector2(-5, 1)
shape = SubResource("RectangleShape2D_lgnq4")

[node name="MainMenuButton" type="Area2D" parent="."]
position = Vector2(928, 601)
script = ExtResource("4_x1fs2")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainMenuButton"]
z_index = 1
position = Vector2(-2, -7)
shape = SubResource("RectangleShape2D_lgnq4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MainMenuButton"]
sprite_frames = SubResource("SpriteFrames_a8lsk")

[node name="BG" type="Area2D" parent="."]
z_index = -100
position = Vector2(628, 344)
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="BG"]
sprite_frames = SubResource("SpriteFrames_h7qgx")

[node name="CatGod" type="Area2D" parent="."]
position = Vector2(268, 226)
script = ExtResource("6_0jj0q")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CatGod"]
sprite_frames = SubResource("SpriteFrames_g56jv")
animation = &"angry"

[node name="FinalKarmaCount" type="RichTextLabel" parent="."]
offset_left = 450.0
offset_top = 30.0
offset_right = 1270.0
offset_bottom = 280.0
mouse_filter = 2
theme_override_colors/default_color = Color(1, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 50
text = "Total karma: -1 (negative). You are sent to hell."

[node name="BribeButton" type="Area2D" parent="."]
visible = false
position = Vector2(992, 344)
script = ExtResource("7_apd6t")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="BribeButton"]
sprite_frames = SubResource("SpriteFrames_pdq4p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BribeButton"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_4p362")

[node name="FishLabel" type="RichTextLabel" parent="BribeButton"]
offset_left = -204.0
offset_top = -107.0
offset_right = 222.0
offset_bottom = 95.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 50
text = "Bribe with collected fish (0)"

[connection signal="mouse_entered" from="Retry" to="Retry" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Retry" to="Retry" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="MainMenuButton" to="MainMenuButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MainMenuButton" to="MainMenuButton" method="_on_mouse_exited"]
[connection signal="bribed" from="BribeButton" to="." method="_on_bribe_button_bribed" flags=6]
[connection signal="mouse_entered" from="BribeButton" to="BribeButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="BribeButton" to="BribeButton" method="_on_mouse_exited"]
